Fix header because of wrong wrapping when resizing

--- a/style.css
+++ b/style.css
@@ -6,24 +6,20 @@ body {
     margin: 0px;
     display: flex;
     flex-direction: column;
-    align-content: flex-start;
+}
+
+.dark-background {
+    background: #1F2937; 
 }
 
 .header {
-    background: #1F2937; 
+    height: 112px;
+    width: 80%;
+    margin: 0 auto;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.header-top {
-    height: 100px;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    gap: 300px;
-    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .logo {
@@ -31,24 +27,16 @@ body {
     max-height: 100px;
  }
 
-.footer {
-    height: 60px;
-    background: #1F2937; 
-    font-weight: 100;
-    font-size: 14px;
-    color: #E5E7EB;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .content-one {
     background-color: #1F2937; 
     font-family: Roboto, sans-serif;
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 50px;
     display: flex;
     align-items: center;
-    gap: 80px;
-    padding: 72px 0px 112px 0px;
+    justify-content: space-between;
+    flex-wrap: wrap-reverse;  
 }
 
 .heading {
@@ -85,9 +73,20 @@ body {
     font-size:small
 }
 
-.bed {
+.bed-image img {
     width: 600px;
     height: 400px;
+}
+
+.footer {
+    height: 60px;
+    background: #1F2937; 
+    font-weight: 100;
+    font-size: 14px;
+    color: #E5E7EB;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 a {
@@ -124,6 +123,5 @@ button {
  background: #E5E7EB;
 
 }
-
 
 
